# med-assist-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  setup_space.py  template.sh
src/: prompt.py
static/: chat.js  style.css
templates/: chat.html
